--- a/templates/forwards/edit.html
+++ b/templates/forwards/edit.html
@@ -33,10 +33,9 @@
                                autocomplete="new-destination">
                     </md-input-container>
 
-                    <div layout="row">
-                        <md-checkbox ng-model="pExpert">نقش ۱</md-checkbox>
-                        <md-checkbox ng-model="pSuperuser">نقش ۲</md-checkbox>
-                        <md-checkbox ng-model="pVIPExpert">نقش ۳</md-checkbox>
+                    <div layout="row" layout-wrap >
+                        <md-checkbox ng-repeat="prm in permissions"
+                                     ng-model="prm.selected">{{prm.title}}</md-checkbox>
                     </div>
 
                 </div>
