--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -33,12 +33,6 @@
                                autocomplete="new-username">
                     </md-input-container>
 
-                    <div layout="row">
-                        <md-checkbox ng-model="pExpert">نقش ۱</md-checkbox>
-                        <md-checkbox ng-model="pSuperuser">نقش ۲</md-checkbox>
-                        <md-checkbox ng-model="pVIPExpert">نقش ۳</md-checkbox>
-                    </div>
-
                     <md-input-container>
                         <label>کلمه عبور</label>
                         <input type="password"
@@ -48,6 +42,12 @@
                                ng-minlength="2"
                                autocomplete="new-password">
                     </md-input-container>
+
+                    <div layout="row" layout-wrap >
+                        <md-checkbox ng-repeat="prm in permissions"
+                                     ng-model="prm.selected">{{prm.title}}</md-checkbox>
+                    </div>
+
                 </div>
             </div>
         </md-dialog-content>
