--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
                            ng-click="login(username, password)"
                            class="md-raised md-primary">ورود
                 </md-button>
-                <div>{{error.error}}</div>
+                <div style="color: red;">{{error.error}}</div>
             </form>
         </md-card-content>
     </md-card>
