--- a/styles/main.less
+++ b/styles/main.less
@@ -117,36 +117,80 @@ fieldset {
     background-color: white;
     padding-right: 5px;
     padding-left: 5px;
-    font-size: 14px;
+    //font-weight: bold;
+    font-size: 16px;
   }
 
   .dashboard-link {
 
     display: inline-block;
-    margin-left: 10px;
-
-
-
-    span.icon {
-      color: coral;
-      font-size: 12px;
-      vertical-align: middle;
-    }
+    margin-left: 20px;
 
     a.link {
-      color: #0000FF;
-      font-size: 12px;
+      display: block;
+      color: #005;
       vertical-align: middle;
       text-decoration: none;
       &:hover {
         text-decoration: underline;
       }
+
+      &.disabled {
+        color: #AAAAAA;
+        cursor: default;
+        pointer-events: none;
+        text-decoration: none;
+      }
+
+      img {
+        display: block;
+        vertical-align: middle;
+        height: 45px;
+        margin: 0 auto;
+      }
     }
 
     span.link {
-      font-size: 12px;
       color: #7D93B2;
+      display: block;
+      vertical-align: middle;
+      font-size: 12px;
     }
+
+    span.title {
+      font-size: 13px;
+      font-weight: normal;
+    }
+
+    span.icon {
+      display: block;
+      vertical-align: middle;
+      padding: 16px;
+      background: no-repeat center center;
+      background-size: contain;
+    }
+    span.icon-mappings {
+      background-image: url(images/raw.png);
+    }
+    span.icon-ontology {
+      background-image: url(images/raw.png);
+    }
+    span.icon-resources {
+      background-image: url(images/raw.png);
+    }
+    span.icon-search {
+      background-image: url(images/raw.png);
+    }
+    span.icon-knowledge-graph {
+      background-image: url(images/raw.png);
+    }
+    span.icon-experts {
+      background-image: url(images/experts.png);
+    }
+    span.icon-raw-text {
+      background-image: url(images/raw.png);
+    }
+
   }
 }
 
