--- a/styles/main.less
+++ b/styles/main.less
@@ -110,8 +110,8 @@ div.block-screen {
 fieldset {
   border: solid 1px #ddd;
   .border-radius(4px);
-  .box-shadow(0 0 10px -2px #aaa);
-  margin: 0 10px 10px;
+  .box-shadow(2px 2px 5px -1px #aaa);
+  margin: 0 10px 20px;
 
   legend {
     background-color: white;
