--- a/templates/ontology/class-tree.html
+++ b/templates/ontology/class-tree.html
@@ -1,3 +1,16 @@
 <div>
-    CLASS-TREE
+    <div ivh-treeview="items"
+         ivh-treeview-use-checkboxes="false">
+        <script type="text/ng-template">
+            <span ivh-treeview-toggle>
+          <span ivh-treeview-twistie></span>
+        </span>
+            <md-box></md-box>
+            <span class="ivh-treeview-node-label" ivh-treeview-toggle>
+          {{trvw.label(node)}}
+        </span>
+            <div ivh-treeview-children></div>
+        </script>
+
+    </div>
 </div>
