--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,12 +3,7 @@
         <fieldset>
             <legend>{{item.header}}</legend>
             <span ng-repeat="link in item.links" class="dashboard-link">
-                <a ng-if="!link.state" class="link" ng-class="!link.url ? 'disabled' : ''" href="{{link.url}}"
-                   target="_blank">
-                    <img ng-src="./styles/images/{{item.icon}}.svg" alt="" class="">
-                    <span class="title">{{link.title}}</span>
-                </a>
-                <a ng-if="link.state" class="link" ui-sref="{{link.state}}">
+                <a class="link" ng-class="!link.url ? 'disabled' : ''" href="{{link.url}}" target="_blank">
                     <img ng-src="./styles/images/{{item.icon}}.svg" alt="" class="">
                     <span class="title">{{link.title}}</span>
                 </a>
