--- a/templates/ontology/class-tree.html
+++ b/templates/ontology/class-tree.html
@@ -1,16 +1,3 @@
 <div>
-    <div ivh-treeview="items"
-         ivh-treeview-use-checkboxes="false">
-        <script type="text/ng-template">
-            <span ivh-treeview-toggle>
-          <span ivh-treeview-twistie></span>
-        </span>
-            <md-box></md-box>
-            <span class="ivh-treeview-node-label" ivh-treeview-toggle>
-          {{trvw.label(node)}}
-        </span>
-            <div ivh-treeview-children></div>
-        </script>
-
-    </div>
+    CLASS-TREE
 </div>
