--- a/styles/main.less
+++ b/styles/main.less
@@ -198,6 +198,12 @@ fieldset {
   font-size: 12px;
 }
 
+.even{
+  background-color: #FFFFFF;
+}
+.odd{
+  background-color: #f8f8f8;
+}
 /**/
 .loading {
   direction: rtl;
