--- a/templates/permissions/list.html
+++ b/templates/permissions/list.html
@@ -16,13 +16,15 @@
             <table md-table cellpadding="10" cellspacing="0" style="width: 100%;">
                 <thead md-head>
                 <tr md-row>
+                    <th md-column style="width: 20px;">#</th>
                     <th md-column>نام</th>
                     <th md-column>توضیحات</th>
                     <th md-column style="width: 50px;"></th>
                 </tr>
                 </thead>
                 <tbody md-body>
-                <tr md-row ng-repeat="prm in data.permissions track by $index">
+                <tr md-row ng-repeat="prm in data.permissions track by $index" ng-class="{even: $even, odd: $odd}">
+                    <td md-cell>{{$index}}</td>
                     <td md-cell>{{prm.title}}</td>
                     <td md-cell>{{prm.description}}</td>
                     <td md-cell>
