--- a/templates/users/list.html
+++ b/templates/users/list.html
@@ -33,7 +33,7 @@
             <table md-table cellpadding="10" cellspacing="0" style="width: 100%;">
                 <thead md-head>
                 <tr md-row>
-                    <th md-column style="width: 20px;">ردیف</th>
+                    <th md-column style="width: 20px;">#</th>
                     <th md-column>نام</th>
                     <th md-column>نام کاربری</th>
                     <th md-column>دسترسی‌ها</th>
@@ -41,7 +41,7 @@
                 </tr>
                 </thead>
                 <tbody md-body>
-                <tr md-row ng-repeat="user in data.users track by $index">
+                <tr md-row ng-repeat="user in data.users track by $index" ng-class="{even: $even, odd: $odd}">
                     <td md-cell>{{$index}}</td>
                     <td md-cell>{{user.name}}</td>
                     <td md-cell>{{user.username}}</td>
