make row number for lists, make alternate rows highlight

--- a/templates/forwards/list.html
+++ b/templates/forwards/list.html
@@ -25,7 +25,7 @@
                 </thead>
                 <tbody md-body>
                 <tr md-row ng-repeat="frw in data.forwards track by $index" ng-class="{even: $even, odd: $odd}">
-                    <td md-cell>{{$index}}</td>
+                    <td md-cell>{{$index+1}}</td>
                     <td md-cell>{{frw.source}}</td>
                     <td md-cell>{{frw.destination}}</td>
                     <td md-cell><div ng-repeat="p in frw.permissions">{{p.title}}</div></td>
