--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,4 @@
-<md-toolbar class="md-whiteframe-1dp">
-    <div class="md-toolbar-tools">
-        <div class="md-title">سیستم گراف دانش فارسی</div>
-
-        <span flex=""></span>
-        <span class="fa fa-lg fa-user"></span>
-        <h3>({{username}})</h3>
-        <md-button ng-click="logout($event)">خروج</md-button>
-    </div>
-</md-toolbar>
+<div ng-include="'./templates/toolbar.html'"></div>
 <div ng-cloak>
     <md-content>
         <md-tabs md-dynamic-height md-border-bottom md-selected="getSelectedTabIndex()">
