--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -1,4 +1,4 @@
-<md-toolbar class="md-whiteframe-1dp">
+<md-toolbar class="md-whiteframe-1dp" ng-controller="MainController">
     <div class="md-toolbar-tools">
         <div class="md-title">سیستم گراف دانش فارسی</div>
 
