--- a/styles/main.less
+++ b/styles/main.less
@@ -264,6 +264,11 @@ md-dialog {
   direction: rtl;
 }
 
+input.md-input{
+  font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 12px;
+}
+
 th, td {
   text-align: right !important;
 }
