--- a/styles/main.css
+++ b/styles/main.css
@@ -268,6 +268,10 @@ md-sidenav.md-closed.md-locked-open-add-active {
 md-dialog {
   direction: rtl;
 }
+input.md-input {
+  font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 12px;
+}
 th,
 td {
   text-align: right !important;
