--- a/styles/main.css
+++ b/styles/main.css
@@ -47,6 +47,16 @@
 * {
   font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+h7 {
+  padding: 0;
+  margin: 0;
+}
 .ltr {
   direction: ltr;
 }
@@ -54,10 +64,10 @@
   direction: rtl;
 }
 .left {
-  text-align: left;
+  text-align: left !important;
 }
 .right {
-  text-align: right;
+  text-align: right !important;
 }
 thead tr {
   background-color: #d9edf7;
@@ -218,6 +228,32 @@ fieldset .dashboard-link span.icon-raw-text {
 .odd {
   background-color: #f8f8f8;
 }
+.breadcrumb {
+  padding: 8px 15px;
+  margin: 0 0 0px;
+  list-style: none;
+  background-color: #f5f5f5;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+.breadcrumb li {
+  display: inline-block;
+  *display: inline;
+  text-shadow: 0 1px 0 #ffffff;
+  *zoom: 1;
+}
+.breadcrumb li > .divider {
+  padding: 0 5px;
+  color: #ccc;
+}
+.breadcrumb .active {
+  color: #999999;
+}
+.msg-error {
+  color: #F00;
+  font-size: 14px;
+}
 /**/
 .loading {
   direction: rtl;
@@ -275,4 +311,7 @@ input.md-input {
 th,
 td {
   text-align: right !important;
+}
+ul.ivh-treeview {
+  padding-left: 40px;
 }
