--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
             <md-tab ui-sref="home.dashboard" label="داشبورد"></md-tab>
             <md-tab ui-sref="home.users" label="کاربران" ng-if="roles.indexOf('User')!==-1"></md-tab>
             <md-tab ui-sref="home.permissions" label="دسترسی‌ها" ng-if="roles.indexOf('Forward')!==-1"></md-tab>
-            <md-tab ui-sref="home.forwards" label="فوروارد" ng-if="roles.indexOf('Forward')!==-1"></md-tab>
+            <md-tab ui-sref="home.forwards" label="فورواردها" ng-if="roles.indexOf('Forward')!==-1"></md-tab>
         </md-tabs>
     </md-content>
 </div>
