--- a/templates/ontology/class.html
+++ b/templates/ontology/class.html
@@ -1,19 +1,33 @@
 <div>
-    <h1>{{clazz.faLabel}}</h1>
-    <h3>{{clazz.enLabel}}</h3>
-    <h4>{{clazz.faComment}}</h4>
-    <h4>{{clazz.enComment}}</h4>
-    <div ng-if="parent">
-        <span>کلاس والد : </span>
-        <a ui-sref="ontology.class({classUrl:clazz.subClassOf})">{{parent.faLabel}}</a>
+    <div layout-margin>
+        <h3>عنوان : {{clazz.faLabel}}</h3>
+        <h5>توضیحات : {{clazz.faComment}}</h5>
+        <h3>عنوان انگلیسی : {{clazz.enLabel}}</h3>
+        <h5>توضیحات انگلیسی : {{clazz.enComment}}</h5>
+        <h3>
+            <span>کلاس والد : </span>
+            <a ui-sref="ontology.class({classUrl:clazz.subClassOf})">{{parent.faLabel}}</a>
+        </h3>
+        <h5>
+            <span>کلاس‌های معادل : </span>
+            <span ng-repeat="item in property.equivalentClasses">{{item}}{{$last ? '' : ' - '}}</span>
+        </h5>
+        <h5>
+            <span>کلاس‌های متناقض : </span>
+            <span ng-repeat="item in property.disjointWith">{{item}}{{$last ? '' : ' - '}}</span>
+        </h5>
     </div>
+
     <md-divider></md-divider>
-    <h5>ویژگی‌ها : </h5>
-    <div>
-        <div ng-repeat="p in clazz.properties">
-            <span>{{p}}</span>
-            <a class="ivh-treeview-node-link fa fa-1x fa-external-link"
-               ui-sref="ontology.property({propertyUrl:p})"></a>
+
+    <div layout-margin>
+        <h3>ویژگی‌ها : </h3>
+        <div>
+            <div ng-repeat="p in clazz.properties">
+                <span>{{p}}</span>
+                <a class="ivh-treeview-node-link fa fa-1x fa-external-link"
+                   ui-sref="ontology.property({propertyUrl:p})"></a>
+            </div>
         </div>
     </div>
 </div>
