--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,15 +1,2 @@
-<md-toolbar class="md-whiteframe-1dp">
-    <div class="md-toolbar-tools">
-        <div class="md-title">سیستم گراف دانش فارسی</div>
-
-        <span flex=""></span>
-        <span class="fa fa-lg fa-user"></span>
-        <h3>({{username}})</h3>
-        <md-button ng-click="logout($event)">خروج</md-button>
-    </div>
-</md-toolbar>
-<div>
-
-    <div ng-switch-when=""></div>
-
-</div>
+<div ng-include="'./templates/toolbar.html'"></div>
+<div ui-view></div>
