--- a/templates/user/password.html
+++ b/templates/user/password.html
@@ -23,6 +23,6 @@
     </form>
 
     <section>
-        <md-button class="md-raised md-primary" ng-click="save()" aria-label="ذخیره">ذخیره</md-button>
+        <md-button class="md-raised md-primary" ng-click="updatePassword()" aria-label="ذخیره">ذخیره</md-button>
     </section>
 </md-content>
