ontology; show class and properties, not edit yet

--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -20,13 +20,13 @@
 
 @font-face {
   font-family: 'IRANSans-web';
-  src: url('fonts/IranFonts/IRANSans.eot?#') format('eot'), /* IE6–8 */ url('fonts/IranFonts/IRANSans.woff2') format('woff2'), /* Chrome36+, Opera24+*/ url('fonts/IranFonts/IRANSans.woff') format('woff');  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+  src: url('fonts/IranFonts/IRANSans.eot?#') format('eot'), /* IE6ï¿½8 */ url('fonts/IranFonts/IRANSans.woff2') format('woff2'), /* Chrome36+, Opera24+*/ url('fonts/IranFonts/IRANSans.woff') format('woff');  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'IRANSans-web';
-  src: url('fonts/IranFonts/IRANSans-Bold.eot?#') format('eot'), /* IE6–8 */ url('fonts/IranFonts/IRANSans-Bold.woff2') format('woff2'), /* Chrome36+, Opera24+*/ url('fonts/IranFonts/IRANSans-Bold.woff') format('woff');  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+  src: url('fonts/IranFonts/IRANSans-Bold.eot?#') format('eot'), /* IE6ï¿½8 */ url('fonts/IranFonts/IRANSans-Bold.woff2') format('woff2'), /* Chrome36+, Opera24+*/ url('fonts/IranFonts/IRANSans-Bold.woff') format('woff');  /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
   font-weight: bold;
 }
 
