--- a/styles/main.css
+++ b/styles/main.css
@@ -44,16 +44,101 @@
 .fontIRANSans-web {
   font-family: IRANSans-web !important;
 }
-* {
-  font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.scroll1::-webkit-scrollbar {
+  width: 5px;
+}
+.scroll1::-webkit-scrollbar-track {
+  background: #ddd;
+}
+.scroll1::-webkit-scrollbar-thumb {
+  background: #666;
+}
+.scroll2::-webkit-scrollbar {
+  width: 5px;
+}
+.scroll2::-webkit-scrollbar-thumb {
+  background: #666;
+}
+.scroll3::-webkit-scrollbar {
+  width: 5px;
+}
+.scroll3::-webkit-scrollbar-thumb {
+  background: #ddd;
+}
+.scroll3::-webkit-scrollbar-track {
+  background: #666;
+}
+.scroll4::-webkit-scrollbar {
+  width: 10px;
+}
+.scroll4::-webkit-scrollbar-thumb {
+  background: #666;
+  border-radius: 20px;
+}
+.scroll4::-webkit-scrollbar-track {
+  background: #ddd;
+  border-radius: 20px;
+}
+.scroll5::-webkit-scrollbar {
+  width: 15px;
+}
+.scroll5::-webkit-scrollbar-thumb {
+  background: #666;
+}
+.scroll5::-webkit-scrollbar-track {
+  background: #ddd;
+}
+.scroll5::-webkit-scrollbar-button {
+  background: #666;
+  height: 15px;
+  border-radius: 50%;
+}
+h1 {
+  font-size: 2em !important;
+  margin: .67em 0;
+}
+h2 {
+  font-size: 1.5em !important;
+  margin: .75em 0;
+}
+h3 {
+  font-size: 1.17em !important;
+  margin: .83em 0;
+}
+h4 {
+  font-size: 1em !important;
+  margin: 1em 0;
+}
+h5 {
+  font-size: .83em !important;
+  margin: 1.5em 0;
+}
+h6 {
+  font-size: .75em !important;
+  margin: 1.67em 0;
 }
 h1,
 h2,
 h3,
 h4,
 h5,
-h6,
-h7 {
+h6 {
+  font-weight: bolder;
+}
+* {
+  font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+}
+body {
+  overflow-y: scroll;
+  direction: rtl;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   padding: 0;
   margin: 0;
 }
@@ -72,11 +157,23 @@ h7 {
 thead tr {
   background-color: #d9edf7;
 }
+th {
+  font-size: 1.17em;
+  white-space: nowrap;
+}
+td,
+td * {
+  font-size: 1em;
+}
+th,
+td {
+  vertical-align: top;
+}
 .odd {
-  background-color: #f8f8f8;
+  background-color: #f5f5f5;
 }
 .even {
-  background-color: #e8e8e8;
+  background-color: #ffffff;
 }
 .center {
   text-align: center;
@@ -222,12 +319,6 @@ fieldset .dashboard-link span.icon-raw-text {
 .ivh-treeview-node-link {
   font-size: 12px;
 }
-.even {
-  background-color: #FFFFFF;
-}
-.odd {
-  background-color: #f8f8f8;
-}
 .breadcrumb {
   padding: 8px 15px;
   margin: 0 0 0px;
@@ -307,10 +398,6 @@ md-dialog {
 input.md-input {
   font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
-}
-th,
-td {
-  text-align: right !important;
 }
 ul.ivh-treeview {
   padding-left: 40px;
